<resources>
    <string name="app_name">Search Reminder</string>
    <string name="title_activity_search">Search Reminder</string>
    <string name="title_activity_query_config">Configure Search Query</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_queue">Queue</string>

    <string name="search_prompt">Enter a search query here&#8230;</string>
    <string name="search_engine_logo_img_desc">search engine logo</string>

    <string-array name="search_engines">
        <item>Google</item>
        <item>Wikipedia</item>
        <item>Bing</item>
        <item>Yahoo!</item>
        <item>YouTube</item>
        <item>DuckDuckGo</item>
    </string-array>
    <string-array name="search_engine_urls">
        <item>google.com/search?q=</item>
        <item>en.wikipedia.org/wiki/</item>
        <item>bing.com/search?q=</item>
        <item>search.yahoo.com/search?p=</item>
        <item>youtube.com/results?search_query=</item>
        <item>duckduckgo.com/?q=</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button_text">Search</string>
    <string name="query_textbox_placeholder">Query</string>
    <string name="engine_title_placeholder">Engine</string>
    <string name="query_edit_label">Query</string>
    <string name="edit_engine_label">Engine</string>
    <string name="delete_button_label">Delete</string>
    <string name="confirm_button_label">Apply</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="title_activity_settings_fragment">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="empty_queue_placeholder_text">Add a query in the \'Search\' menu</string>
    <string name="channel_name">sr_notification_channel</string>
    <string name="channel_description">Notification channel for Search Reminder app</string>
</resources>
